<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.rafalesan.credikiosko.auth.signup.SignupAction" />
        <variable
            name="viewModel"
            type="com.rafalesan.credikiosko.auth.signup.SignupViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_2x">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAppLogo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/space_4x"
                android:layout_marginHorizontal="@dimen/space_8x"
                app:layout_constraintBottom_toTopOf="@+id/tvAppName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_app" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginBottom="@dimen/space_2x"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
                app:layout_constraintBottom_toTopOf="@+id/tvSignupDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignupDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup_description"
                android:layout_marginBottom="@dimen/space_2x"
                app:layout_constraintBottom_toTopOf="@+id/inputName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/complete_name"
                app:errorText='@{viewModel.formErrors["name"]}'
                app:errorTextString='@{viewModel.apiFormErrors["name"]}'
                app:startIconDrawable="@drawable/ic_outline_person"
                app:layout_constraintTop_toBottomOf="@+id/tvSignupDescription"
                app:layout_constraintBottom_toTopOf="@+id/inputNickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputNickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/nickname"
                app:errorText='@{viewModel.formErrors["nickname"]}'
                app:errorTextString='@{viewModel.apiFormErrors["nickname"]}'
                app:startIconDrawable="@drawable/ic_outline_person"
                app:layout_constraintTop_toBottomOf="@+id/inputName"
                app:layout_constraintBottom_toTopOf="@+id/inputBusinessName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.nickname}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputBusinessName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/business_name"
                app:errorText='@{viewModel.formErrors["businessName"]}'
                app:errorTextString='@{viewModel.apiFormErrors["businessName"]}'
                app:startIconDrawable="@drawable/ic_outline_store"
                app:layout_constraintTop_toBottomOf="@+id/inputNickname"
                app:layout_constraintBottom_toTopOf="@+id/inputEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBusinessName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.businessName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/email"
                app:errorText='@{viewModel.formErrors["email"]}'
                app:errorTextString='@{viewModel.apiFormErrors["email"]}'
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@+id/inputBusinessName"
                app:layout_constraintBottom_toTopOf="@+id/inputPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/password"
                app:errorText='@{viewModel.formErrors["password"]}'
                app:errorTextString='@{viewModel.apiFormErrors["password"]}'
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null"
                app:startIconDrawable="@drawable/ic_lock"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintBottom_toTopOf="@+id/inputPasswordConfirmation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/inputPasswordConfirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2x"
                android:hint="@string/repeat_password"
                app:errorText='@{viewModel.formErrors["passwordConfirmation"]}'
                app:errorTextString='@{viewModel.apiFormErrors["passwordConfirmation"]}'
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null"
                app:startIconDrawable="@drawable/ic_lock"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.passwordConfirmation}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/PrimaryButton"
                android:id="@+id/btnSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_4x"
                android:text="@string/sign_up"
                android:onClick="@{() -> viewModel.perform(SignupAction.Signup.INSTANCE)}"
                app:layout_constraintTop_toBottomOf="@+id/inputPasswordConfirmation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
